--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,96 @@
-$black: green;
+@use 'sass:color';
+
+/*
+  Есть базовая палитра серых, 10 градаций.
+  
+  Есть разные точки входа в приложение:
+  1. Поиск и добавление слова;
+  2. Тренировка;
+  3. Список карточек;
+  4. Настройки.
+  
+  У каждой точки входа есть свой primary цвет. 
+  Hue которго используется как база палитры серого 
+  для этой точки входа.
+
+  В итоге, для каждой точки входа у меня есть:
+  — primary цвет;
+  — палитра из 10-ти серых со своим, специфическим оттенком.
+
+  Структурные цвета в каждой точке входа будут использовать
+  локальную палитру. То есть — например у меня есть input,
+  со своими цветами текста, placeholder-a и рамки.
+  Например это gray1 для текста, gray3 для placeholder-a и 
+  gray6 для рамки. 
+  Что я хочу, чтобы в каждой точке входа эти переменные gray 
+  имели свое, немного отличное значение.
+
+  В обычном css это был бы класс где-нибудь на высоком уровне, 
+  который бы переопределял переменные для данного модуля.
+  Скажем body.search менял бы hue у всех серых для всех элементов
+  которые принадлежат этому элементу.
+
+  Я пока не понимаю как красиво сделать это в sass.
+  Пока просто вбиваю все палитры, которые у меня есть
+  на данный момент.
+*/
+
+/* COLOR PALETTES */ 
+
+/* 
+  base palette
+  primary hue - 197
+  gray10 - 204
+*/
+$orange-gradient: linear-gradient(175deg, #FF9960 0%, #FF5C00 100%);
+
+$gray1: #1B2529; 
+$gray2: #32454B;
+$gray3: #3E5259;
+$gray4: #52666D;
+$gray5: #61757C;
+$gray6: #7B8E94;
+$gray7: #9AABB1;
+$gray8: #CBD5D9;
+$gray9: #E4E9EB;
+$gray10: #F5F8FA;
+
+/* 
+  study palette
+  primary hue — 211
+*/
+$primary1--study: #136FD1;
+
+$primary-gradient--study: linear-gradient(175deg, #26AAF4 0%, #126FD1 100%);
+$primary-gradient--study--light: linear-gradient(175deg, #FFFFFF 0%, #F7FAFC 100%);
+
+$gray1--study: color.adjust($gray1, $hue: 14);
+$gray2--study: color.adjust($gray2, $hue: 14);
+$gray3--study: color.adjust($gray3, $hue: 14);
+$gray4--study: color.adjust($gray4, $hue: 14);
+$gray5--study: color.adjust($gray5, $hue: 14);
+$gray6--study: color.adjust($gray6, $hue: 14);
+$gray7--study: color.adjust($gray7, $hue: 14);
+$gray8--study: color.adjust($gray8, $hue: 14);
+$gray9--study: color.adjust($gray9, $hue: 14);
+$gray10--study: color.adjust($gray10, $hue: 7);
+
+/* 
+  search palette
+  primary hue — 284
+*/
+$primary1--search: #B21CE8;
+
+$primary-gradient--search: linear-gradient(175deg, #DE32ED 0%, #B31CE8 100%);
+$primary-gradient--search--light: linear-gradient(175deg, #FFFFFF 0%, #F9F5FA 100%);
+
+$gray1--search: color.adjust($gray1, $hue: 87);
+$gray2--search: color.adjust($gray2, $hue: 87);
+$gray3--search: color.adjust($gray3, $hue: 87);
+$gray4--search: color.adjust($gray4, $hue: 87);
+$gray5--search: color.adjust($gray5, $hue: 87);
+$gray6--search: color.adjust($gray6, $hue: 87);
+$gray7--search: color.adjust($gray7, $hue: 87);
+$gray8--search: color.adjust($gray8, $hue: 87);
+$gray9--search: color.adjust($gray9, $hue: 87);
+$gray10--search: color.adjust($gray10, $hue: 80);
