--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -58,3 +58,18 @@ $gray7--search: color.adjust($gray7, $hue: 87);
 $gray8--search: color.adjust($gray8, $hue: 87);
 $gray9--search: color.adjust($gray9, $hue: 87);
 $gray10--search: color.adjust($gray10, $hue: 80);
+
+/*
+  reds
+*/
+$red1: #610316;
+$red2: #8A041A;
+$red3: #AB091E;
+$red4: #CF1124;
+$red5: #E12D39;
+$red6: #EF4E4E;
+$red7: #F86A6A;
+$red8: #FF9B9B;
+$red9: #FFBDBD;
+$red10: #FFE3E3;
+$red11: #FFEBEB;
