--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,6 +1,36 @@
 @font-face {
-  font-family: "Merriweather-regular";
-  src: local("Merriweather-regular"),
-    url("../fonts/merriweather/Merriweather-Regular.ttf") format("truetype");
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/merriweather/Merriweather-Light.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Merriweather';
+  font-style: italic;
+  font-weight: 300;
+  src: url('../fonts/merriweather/Merriweather-LightItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
   font-weight: normal;
+  src: url('../fonts/merriweather/Merriweather-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Merriweather';
+  font-style: italic;
+  font-weight: normal;
+  src: url('../fonts/merriweather/Merriweather-Italic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/merriweather/Merriweather-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Merriweather';
+  font-style: italic;
+  font-weight: 600;
+  src: url('../fonts/merriweather/Merriweather-BoldItalic.ttf') format('truetype');
 }
