--- a/src/components/Input/index.scss
+++ b/src/components/Input/index.scss
@@ -1,25 +1,24 @@
 @import 'styles/variables.scss';
+@import 'styles/utility-mixins/index.scss';
 
-input[type="text"],
-textarea {
-  font-family: $font-family-content;
-  font-style: normal;
-  font-weight: $font-weight-regular;
-
+.form-input {
   display: block;
   width: 100%;
 
-  padding: 13px 16px 15px 16px;
+  padding: $spacing-scale-4 $spacing-scale-5;
   box-sizing: border-box;
 
-  border: 1px solid $gray8;
-  border-radius: 5px;
-  background-color: $gray10;
+  @include border;
+  border-radius: $border-radius-small;
 
-  font-size: 15px;
-  line-height: 150%;
+  font-family: $font-family-content;
+  font-weight: $font-weight-regular;
+  font-style: normal;
+  line-height: $line-height-28;
+
   color: $gray1;
   caret-color: $gray1;
+  background-color: $gray10;
 
   &::placeholder {
     color: $gray6;
@@ -41,9 +40,4 @@ textarea {
       border-color: $red6;
     }
   }
-}
-
-textarea {
-  height: 96px;
-  resize: none;
 }
