--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,9 @@ $spacing-scale-5: 2 * $grid-size;
 $spacing-scale-6: 2.5 * $grid-size;
 $spacing-scale-7: 3 * $grid-size;
 $spacing-scale-8: 4 * $grid-size;
+$spacing-scale-9: 6 * $grid-size;
+$spacing-scale-10: 8 * $grid-size;
+$spacing-scale-11: 12 * $grid-size;
 
 // COLORS
 // 'Base' theme
