+ form-group component

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -113,6 +113,9 @@ $font-weight-bold: 600;
 $line-height-16: px-to-rem(16px);
 $line-height-28: px-to-rem(28px);
 
+// Letter-spacing
+$letter-spacing-r: px-to-rem(0.5px);
+
 // BORDERS
 // Border-size
 $border-size-1: 1px;
