--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -84,7 +84,7 @@ $primary-gradient--search: linear-gradient(175deg, #DE32ED 0%, #B31CE8 100%);
 $primary-gradient--search--light: linear-gradient(175deg, #FFFFFF 0%, #F9F5FA 100%);
 
 // TYPOGRAPHY
-$font-size-base: 1rem;
+//$font-size-base: 1rem;
 
 // UI typescale
 $font-size-ui-ssm: px-to-rem(12px);
