--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,17 +3,18 @@
 
 // Layout
 $grid-size: px-to-rem(8px);
-$spacing-scale-1: 0.25 * $grid-size;
-$spacing-scale-2: 0.5 * $grid-size;
-$spacing-scale-3: 1 * $grid-size;
-$spacing-scale-4: 1.5 * $grid-size;
-$spacing-scale-5: 2 * $grid-size;
-$spacing-scale-6: 2.5 * $grid-size;
-$spacing-scale-7: 3 * $grid-size;
-$spacing-scale-8: 4 * $grid-size;
-$spacing-scale-9: 6 * $grid-size;
-$spacing-scale-10: 8 * $grid-size;
-$spacing-scale-11: 12 * $grid-size;
+$spacing-px-2: 0.25 * $grid-size;
+$spacing-px-4: 0.5 * $grid-size;
+$spacing-px-8: 1 * $grid-size;
+$spacing-px-12: 1.5 * $grid-size;
+$spacing-px-16: 2 * $grid-size;
+$spacing-px-20: 2.5 * $grid-size;
+$spacing-px-24: 3 * $grid-size;
+$spacing-px-32: 4 * $grid-size;
+$spacing-px-40: 5 * $grid-size;
+$spacing-px-48: 6 * $grid-size;
+$spacing-px-64: 8 * $grid-size;
+$spacing-px-96: 12 * $grid-size;
 
 // COLORS
 // 'Base' theme
@@ -124,5 +125,5 @@ $border-size-1: 1px;
 $border-color: $gray300;
 
 // Border-radius
-$border-radius-small: $spacing-scale-2;
+$border-radius-small: $spacing-px-4;
 $border-radius-full: 50%;
