--- a/src/components/Textarea/index.scss
+++ b/src/components/Textarea/index.scss
@@ -35,7 +35,7 @@
     box-sizing: border-box;
   
     @include border;
-    border-radius: $border-radius-small;
+    @include round-sm;
   
     font-family: $font-family-content;
     font-weight: $font-weight-regular;
