--- a/src/components/Progress/index.scss
+++ b/src/components/Progress/index.scss
@@ -1,9 +1,11 @@
 @import 'styles/variables.scss';
 @import 'styles/utility-mixins/index.scss';
+
 .progress {
   position: relative;
-  height: 4px;
-  border-radius: 2px;
+  height: $spacing-px-4;
+
+  @include border-radius-full;
   background-color: rgba(255, 255, 255, .4);
 }
 
@@ -12,7 +14,9 @@
   left: 0;
   top: 0;
   bottom: 0;
+  
   border-radius: inherit;
+  @include bg-white;
+  
   transition: width 500ms ease-out;
-  @include border--danger;
 }
