--- a/src/styles/utility-mixins/index.scss
+++ b/src/styles/utility-mixins/index.scss
@@ -1,3 +1,4 @@
-@import './border.scss';
 @import './background.scss';
+@import './spacing.scss';
+@import './border.scss';
 @import './typography.scss';
