--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,10 @@ $spacing-px-40: 5 * $grid-size;
 $spacing-px-48: 6 * $grid-size;
 $spacing-px-64: 8 * $grid-size;
 $spacing-px-96: 12 * $grid-size;
+$spacing-px-128: 16 * $grid-size;
+$spacing-px-192: 24 * $grid-size;
+$spacing-px-256: 32 * $grid-size;
+$spacing-px-384: 48 * $grid-size;
 
 // COLORS
 // 'Base' theme
