+ theme-specific custom properties

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import './functions.scss';
 @import './variables.scss';
 @import './utility-mixins/index.scss';
+@import './layout.scss';
 
 body {
   padding: px-to-rem(50px);
