--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -22,16 +22,18 @@ $spacing-px-384: 48 * $grid-size;
 
 // COLORS
 // 'Base' theme
-$gray1000: #1B2529; // gra1
-$gray900: #32454B; // 2
-$gray800: #3E5259; // 3
-$gray700: #52666D; // 4
-$gray600: #61757C; // 5
-$gray500: #7B8E94; // 6
-$gray400: #9AABB1; // 7
-$gray300: #CBD5D9; // 8
-$gray200: #E4E9EB; // 9
-$gray100: #F5F8FA; // 10
+$gray1000: #1B2529;
+$gray900: #32454B;
+$gray800: #3E5259;
+$gray700: #52666D;
+$gray600: #61757C;
+$gray500: #7B8E94;
+$gray400: #9AABB1;
+$gray300: #CBD5D9;
+$gray200: #E4E9EB;
+$gray100: #F5F8FA;
+
+$primary1000: #034F69;
 
 $red1000: #610316;
 $red900: #8A041A;
