--- a/src/components/shared/Button/index.scss
+++ b/src/components/shared/Button/index.scss
@@ -9,7 +9,7 @@
   @include font-size-ui;
   @include line-height-24;
   text-align: center;
-  color: $gray1000;
+  color: var(--gray1000);
   
   @include bg-white;
   @include border-none;
@@ -18,7 +18,7 @@
   // Styles
   &--primary {
     color: #fff;
-    background-color: $gray900;
+    background-color: var(--primary1000);
   }
   &--tertiary {
     @include border;
